# rucy

./: Cargo.toml
config/: config.json.example
src/: main.rs
src/bot/: commands.rs  config.rs  mod.rs
src/bot/modules/: mod.rs  picarto.rs
src/db/: mod.rs
