[package]
name = "rucy"
version = "0.1.0"
authors = ["Alexandr <l4zygreed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
json = "0.12.4"
reqwest = { version = "0.11.2", features = ["blocking"] }
tokio = { version = "1.3.0", features = ["full"] }
mongodb = { version = "1.2.0", features = ["async-std-runtime"], default-features = false }
serde = "1.0.124"
serde_json = "1.0.64"

# [dependencies.tokio]
# version = "1.3.0"
# features = ["full"]
# features = ["rt-multi-thread"]

# [dependencies.mongodb]
# version = "1.2.0"
# default-features = false
# features = ["async-std-runtime"]
